deployment/dcm4che_deployment.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: dcm4chee
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: dcm4chee
    spec:
      containers:
        - name: dcm4chee-container
          image: dcm4che/dcm4chee-arc-psql:5.15.1
          # image: dcm4che/dcm4chee-arc-psql:5.13.3
          # image: dcm4che/dcm4chee-arc-psql:5.13.3-secure
          ports:
            - containerPort: 8080
            - containerPort: 8443
            - containerPort: 9990
            - containerPort: 11112
            - containerPort: 2575
          volumeMounts:
            - mountPath: /opt/wildfly/standalone
              name: standalone-data
            - mountPath: /storage
              name: storage-data
      volumes:
        - name: standalone-data
          hostPath:
            path: /data_deployment/dcm4che/server_data
            type: DirectoryOrCreate
        - name: storage-data
          hostPath:
            path: /data_deployment/dcm4che/dicom_data
            type: DirectoryOrCreate
---
