deployment/dcm4che_postgres_deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: postgres-dcm4che
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres-dcm4che
    spec:
      containers:
        - name: postgres-dcm4che-container
          image: dcm4che/postgres-dcm4chee:11.1-15
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
      volumes:
      - name: postgres-data
        hostPath:
           path: /data_deployment/postgres-dcm4che
           type: DirectoryOrCreate
---
