deployment/keycloak_deployment.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: keycloak
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers: 
        - name: keycloak-container
          image: jboss/keycloak:4.8.3.Final
          imagePullPolicy: IfNotPresent
          args: ["-b","0.0.0.0","-c", "standalone-ha.xml", "-Dkeycloak.migration.action=import", "-Dkeycloak.migration.provider=dir","-Dkeycloak.migration.dir=/opt/jboss/keycloak/standalone/configuration/import","-Dkeycloak.migration.strategy=IGNORE_EXISTING"]
          ports:
          - name: http
            containerPort: 8080
          - name: https
            containerPort: 8443
          - name: admin
            containerPort: 9990
          volumeMounts:
            - name: keycloak-import
              mountPath: /opt/jboss/keycloak/standalone/configuration/import
            - name: tls-config
              mountPath: "/etc/x509/https"
              readOnly: true
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
      volumes:
      - name: keycloak-import
        configMap:
          name: keycloak-config
      - name: tls-config
        secret:
          secretName: tls-secret
---
