deployment/ldap_deployment.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ldap
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ldap
    spec:
      containers:
        - name: ldap-container
          image: dcm4che/slapd-dcm4chee:2.4.44-15.1
          # image: dktk-jip-registry.dkfz.de/jip/ldapdcm4che:v0.9
          ports:
            - containerPort: 389
          volumeMounts:
            - mountPath: /var/lib/ldap
              name: ldap
            - mountPath: /etc/ldap/slapd.d
              name: slapd
            - mountPath: /import
              name: ldif
      volumes:
      - name: ldap
        hostPath:
          path: /data_deployment/ldap
          type: DirectoryOrCreate
      - name: slapd
        hostPath:
          path: /data_deployment/slapd.d
          type: DirectoryOrCreate
      - name: ldif
        configMap:
          name: dcm4che-iid-config
