deployment/ohif_deployment.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ohif
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ohif
    spec:
      containers:
        - name: ohif-container
          image: ohif/viewer:react-test
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
              name: ohif-config-file
            - mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
              name: nginx-config
      volumes:
      - name: ohif-config-file
        configMap:
          name: ohif-config
          items:
          - key: index.html
            path: index.html
      - name: nginx-config
        configMap:
          name: ohif-config
          items:
          - key: default.conf
            path: default.conf
---
