deployment/ldap_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ldap-service
  namespace: kube-system
  labels:
    app: ldap
spec:
  ports:
  - name: ldap-port
    port: 389
  selector:
    app: ldap
