deployment/dcm4che_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dcm4chee-service
  namespace: default
  labels:
    app: dcm4chee
spec:
  type: NodePort
  ports:
  - name: dcm4che-http
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: dcm4che-https
    port: 8443
    targetPort: 8443
    protocol: TCP
  - name: dcm4che-admin
    port: 9990
    targetPort: 9990
    protocol: TCP
  - name: dcm4che-dcm-port
    port: 11115
    nodePort: 31112
    targetPort: 11112
    protocol: TCP
  - name: dcm4che-hl7-port
    port: 2575
    targetPort: 2575
    protocol: TCP
  selector:
    app: dcm4chee
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dcm4chee-ingress-ip
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/ingress.global-static-ip-name: "kubernetes-ingress"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /dcm4chee-arc
        backend:
          serviceName: dcm4chee-service
          servicePort: dcm4che-http
---
