deployment/gatekeeper_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: gatekeeper-service
  namespace: kube-system
spec:
  selector:
    app: gatekeeper
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
      nodePort: 30080
      name: gk-http-port
    - protocol: TCP
      port: 8443
      nodePort: 30443
      targetPort: https
      name: gk-https-port
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gk-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/ingress.global-static-ip-name: "kubernetes-ingress"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /gk
        backend:
          serviceName: gatekeeper-service
          servicePort: 8443
