deployment/keycloak_service.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: kube-system
  labels:
    app: keycloak
spec:
  type: ClusterIP
  ports:
  - name: kc-http-port
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: kc-https-port
    port: 443
    targetPort: 8443
    protocol: TCP
  - name: kc-admin-port
    port: 9090
    targetPort: admin
    protocol: TCP
  selector:
    app: keycloak
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak-ingress-ip
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    # traefik.frontend.rule.type: PathPrefixStrip
    kubernetes.io/ingress.global-static-ip-name: "kubernetes-ingress"
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /auth
        backend:
          serviceName: keycloak-service
          servicePort: kc-https-port
---
