deployment/ohif_service.yml
apiVersion: v1
kind: Service
metadata:
  name: ohif-service
  namespace: default
  labels:
    app: ohif
spec:
  type: ClusterIP
  ports:
  - name: ohif-port
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: ohif
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ohif-ingress-ip
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip

spec:
  rules:
  - host: 
    http:
      paths:
      - path: /ohif
        backend:
          serviceName: ohif-service
          servicePort: 80
